# OdbDesign

./: .ai-repo-summary.md  .ai-repo-summary2.md  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile (exe)  Dockerfile.prebuilt  Dockerfile_OdbDesignServer  Dockerfile_PyOdbDesignServer  OdbDesign.code-workspace  README-SETUP.md  README.md  Research Report on ODB++ Specification.md  SECURITY_REMEDIATION_PLAN.md  Those qualities are certainly beneficial.txt  binary-caching-nuget.md  compose.yml  cpp.hint  nuget.config  openmemory.md  package-lock.json  package.json  requirements.txt  setup-linux.sh  testEnvironments.json  vcpkg-backup.json  vcpkg-configuration-json.md  vcpkg-configuration.json  vcpkg-port-versions_171125.txt  vcpkg.json
OdbDesignApp/: CMakeLists.txt  OdbDesignApp.cpp  OdbDesignApp.h
OdbDesignLib/: ArchiveExtractor.cpp  ArchiveExtractor.h  AttrListFile.h  CMakeLists.txt  Component.cpp  Component.h  ComponentLayer.cpp  ComponentLayer.h  ComponentLayerDirectory.cpp  ComponentLayerDirectory.h  Constants.h  CrowReturnable.cpp  CrowReturnable.h  Design.cpp  Design.h  DesignCache.cpp  DesignCache.h  EdaData.cpp  EdaData.h  EdaDataFile.cpp  EdaDataFile.h  FileArchive.cpp  FileArchive.h  FileModel.cpp  FileModel.h  IJsonConvertable.cpp  IJsonConvertable.h  IOdbApp.h  IOdbServerApp.h  IProtoBuffable.cpp  IProtoBuffable.h  JsonCrowReturnable.h  Layer.cpp  Layer.h  LayerDirectory.cpp  LayerDirectory.h  MatrixFile.cpp  MatrixFile.h  MiscInfoFile.cpp  MiscInfoFile.h  (+55 more)
OdbDesignLib/App/: BasicRequestAuthentication.cpp  BasicRequestAuthentication.h  CrowHttpServer.cpp  CrowHttpServer.h  DesignCache.cpp  DesignCache.h  HttpRequest.h  HttpResponse.h  IHttpServer.h  IOdbApp.cpp  IOdbApp.h  IOdbServerApp.h  IRequestAuthentication.cpp  IRequestAuthentication.h  OdbAppBase.cpp  OdbAppBase.h  OdbDesignArgs.cpp  OdbDesignArgs.h  OdbServerAppBase.cpp  OdbServerAppBase.h  RequestAuthenticationBase.cpp  RequestAuthenticationBase.h  RouteController.cpp  RouteController.h
OdbDesignLib/FileModel/: ISaveable.h  IStreamSaveable.h  OdbFile.cpp  OdbFile.h  OdbFileRecord.cpp  OdbFileRecord.h  invalid_odb_error.cpp  invalid_odb_error.h  parse_error.cpp  parse_error.h  parse_info.cpp  parse_info.h
OdbDesignLib/ProductModel/: Component.cpp  Component.h  Design.cpp  Design.h  Net.cpp  Net.h  Package.cpp  Package.h  Part.cpp  Part.h  Pin.cpp  Pin.h  PinConnection.cpp  PinConnection.h  Via.cpp  Via.h
OdbDesignLib/ProtoBuf/: attrlistfile.grpc.pb.cc  attrlistfile.grpc.pb.h  attrlistfile.pb.cc  attrlistfile.pb.h  color.pb.cc  color.pb.h  common.grpc.pb.cc  common.grpc.pb.h  common.pb.cc  common.pb.h  component.grpc.pb.cc  component.grpc.pb.h  component.pb.cc  component.pb.h  componentsfile.grpc.pb.cc  componentsfile.grpc.pb.h  componentsfile.pb.cc  componentsfile.pb.h  design.grpc.pb.cc  design.grpc.pb.h  design.pb.cc  design.pb.h  edadatafile.grpc.pb.cc  edadatafile.grpc.pb.h  edadatafile.pb.cc  edadatafile.pb.h  enums.grpc.pb.cc  enums.grpc.pb.h  enums.pb.cc  enums.pb.h  featuresfile.grpc.pb.cc  featuresfile.grpc.pb.h  featuresfile.pb.cc  featuresfile.pb.h  filearchive.grpc.pb.cc  filearchive.grpc.pb.h  filearchive.pb.cc  filearchive.pb.h  layerdirectory.grpc.pb.cc  layerdirectory.grpc.pb.h  (+60 more)
OdbDesignLib/proto/: edadatafile.pb.cc  edadatafile.pb.h
OdbDesignLib/protoc/: attrlistfile.proto  color.proto  common.proto  component.proto  componentsfile.proto  design.proto  edadatafile.proto  enums.proto  featuresfile.proto  filearchive.proto  layerdirectory.proto  matrixfile.proto  miscinfofile.proto  net.proto  netlistfile.proto  package.proto  part.proto  pin.proto  pinconnection.proto  standardfontsfile.proto  stepdirectory.proto  stephdrfile.proto  symbolname.proto  symbolsdirectory.proto  toolsfile.proto  via.proto
OdbDesignServer/: CMakeLists.txt  IOdbServerApp.h  OdbDesignServer.cpp  OdbDesignServer.h  OdbDesignServerApp.cpp  OdbDesignServerApp.h  OdbServerAppBase.cpp  OdbServerAppBase.h  StepsEdaDataController.cpp  StepsEdaDataController.h  config.json  main.cpp  manage.py  requirements.txt
OdbDesignServer/Config/: GrpcServiceConfig.cpp  GrpcServiceConfig.h
OdbDesignServer/Controllers/: DesignsController.cpp  DesignsController.h  FileModelController.cpp  FileModelController.h  FileUploadController.cpp  FileUploadController.h  HealthCheckController.cpp  HealthCheckController.h  HelloWorldController.cpp  HelloWorldController.h  RouteController.cpp  RouteController.h  StepsEdaDataController.cpp  StepsEdaDataController.h
OdbDesignServer/OdbDesignServer/: asgi.py  settings.py  urls.py  wsgi.py
OdbDesignTests/: ArchiveExtractorTests.cpp  ArchiveTests.cpp  CMakeLists.txt  ComponentHeightPipelineTests.cpp  CrossPlatformTests.cpp  DesignCacheLoadTests.cpp  DesignCacheThreadSafetyTests.cpp  DesignLoadTests.cpp  DesignTests.cpp  EnhancedTests.cpp  FeatureRecordSurfaceTests.cpp  FileArchiveLoadFixture.cpp  FileArchiveLoadFixture.h  FileArchiveLoadTests.cpp  FileArchiveTests.cpp  FileReaderTests.cpp  GetLayerSymbolsTests.cpp  GrpcBatchStreamTests.cpp  GrpcServiceConfigTests.cpp  IntegrationTests.cpp  MatrixFileTests.cpp  OdbDesignTests.cpp  OdbDesignTests.h  ParseFileModelTests.cpp  PerformanceTests.cpp  ProtobufSerializationTests.cpp  SymbolContractTests.cpp  TestTests.cpp
PyOdbDesignLib/: LICENSE  README.md  generate-python-lib.ps1  pyproject.toml
RitikApp/: CMakeLists.txt  main.cpp
Utils/: ArchiveExtractor.cpp  ArchiveExtractor.h  CMakeLists.txt  CommandLineArgs.cpp  CommandLineArgs.h  CrossPlatform.cpp  CrossPlatform.h  CrowReturnable.h  EnumMap.cpp  EnumMap.h  ExitCode.h  FileReader.cpp  FileReader.h  HttpTraceMiddleware.h  IJsonable.cpp  IJsonable.h  JsonCrowReturnable.h  Logger.cpp  Logger.h  StopWatch.cpp  StopWatch.h  StringVector.h  ThreadSafeQueue.h  UrlEncoding.cpp  UrlEncoding.h  Utils.cpp  Utils.h  WorkQueueLoopThread.h  bin2ascii.h  crow_win.h  equals_within.cpp  equals_within.h  export.h  fastcopy.cpp  fastcopy.h  fastmove.cpp  fastmove.h  libarchive_extract.cpp  libarchive_extract.h  macros.h  (+7 more)
(+318 files in other folders)
